main/features/server/build.log
   Compiling swe-edge-runtime-server v0.1.0 (C:\phd-systems\swelabs\edge\runtime\main\features\server)
error[E0583]: file not found for module `default_config_loader`
 --> main\features\server\src\core\config_loader\mod.rs:3:1
  |
3 | mod default_config_loader;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: to create the module `default_config_loader`, create file "main\features\server\src\core\config_loader\default_config_loader.rs" or "main\features\server\src\core\config_loader\default_config_loader\mod.rs"
  = note: if there is a `mod default_config_loader` elsewhere in the crate already, import it with `use crate::...` instead

warning: unused import: `config_override::ConfigOverride`
 --> main\features\server\src\api\config\mod.rs:8:16
  |
8 | pub(crate) use config_override::ConfigOverride;
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `default_config_loader::DefaultConfigLoader`
 --> main\features\server\src\api\config_loader\mod.rs:5:9
  |
5 | pub use default_config_loader::DefaultConfigLoader;
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0583`.
warning: `swe-edge-runtime-server` (lib) generated 2 warnings
error: could not compile `swe-edge-runtime-server` (lib) due to 1 previous error; 2 warnings emitted
